# streamlit-on-heroku

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
src/: app.py
