[tool.poetry]
name = "streamlit-on-heroku"
version = "0.1.0"
description = "Make streamlit work on Heroku"
authors = ["Makoto Tanji <tanji.makoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
