[tool.poetry]
name = "streamlit-on-heroku"
version = "0.1.0"
description = "Make streamlit work on Heroku"
authors = ["Makoto Tanji <tanji.makoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.1.0"
torch = "^1.10.0"
torchvision = "^0.11.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
